feat(ai): revamp single-agent runtime and diagnosis workflows
- replace DB-managed prompt/tool assignment with policy-driven single-agent runtime
- add Tavily, Jina image embeddings, case memory CRUD, and richer tool contracts
- improve websocket thinking stream, booking context, and staff diagnosis synthesis
- add pet health summary support and EMR/case-memory integration updates
- update web/mobile AI chat, admin knowledge/playground, and staff EMR diagnosis UI
- refresh AI service docs, SRS/SDD, and dynamic component planning